--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -35,8 +35,7 @@ http {
 
     # dynamite server config
     server {
-
-        server_name game.root-the-box.com;
+        server_name b04rd.gs2w.tk;
 
         # Running port
         listen 80;
